--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-DB_URL = mongodb://127.0.0.1:27017/blogdatabase 
+DB_URL = mongodb+srv://Amar:Vaibhav@cluster0.xcwfowd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
